workloads/vikunja/kustomize/overlays/prod/gateway-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: vikunja-https

spec:
  hostnames:
    - vikunja.sidewinder.lan

  rules:
    - backendRefs:
        - name: vikunja-prod # SVC name (internal IP:PORT).
          port: 3456
      timeouts:
          request: 300s # 5 minute timeout for large files being uploaded.
          backendRequest: 300s # 5 minute timeout for large files being uploaded.
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: vikunja-http

spec:
  hostnames:
    - vikunja.sidewinder.lan
